# cc-codex-team

./: .gitignore  AUDIT_A.md  AUDIT_C.md  AUDIT_D.md  AUDIT_E.md  AUDIT_F.md  BUGS_055_ROUND2.md  BUGS_055_WIP.md  BUG_ASKUSERQUESTION_NO_TOGGLE.md  BUG_DAEMON_PREMATURE_EXIT.md  BUG_FORMAT_MARKDOWN_ENVELOPE.md  BUG_MONITOR_FILTER.md  BUG_SANDBOX_WORKTREE_GIT.md  DOCS_REPORT.md  DOGFOOD_PAIN_POINTS.md  FINAL_REVIEW.md  FX1_REPORT.md  FX2_REPORT.md  FX3_REPORT.md  MERGE_REPORT.md  README.md  README_zh.md  RELEASE_0_5_2_REPORT.md  REVIEW_R1_daemon.md  REVIEW_R1_daemon_r2.md  REVIEW_R2_cli.md  REVIEW_R2_cli_r2.md  REVIEW_R3_events_render.md  REVIEW_R3_events_render_r2.md  REVIEW_R4_config_build.md  REVIEW_R4_config_build_r2.md  REVIEW_cli.md  REVIEW_codex.md  REVIEW_daemon.md  REVIEW_format.md  REVIEW_profile-util.md  XFIX_1_REPORT.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: bootstrap.md  brief.md  heal.md  shutdown.md  tutorial.md
hooks/: hooks.json
plugins/codex-team/: LICENSE  package-lock.json  package.json  tsconfig.json
scripts/: bootstrap-python-env.sh  daemon-start.sh  daemon-status.sh  daemon-stop.sh  marketplace-add-local.sh  marketplace-install-local.sh  monitor-events.sh  monitor-watchdog.sh
skills/compact-codex-team/: SKILL.md
src/: compaction.ts  daemon.ts  digest.ts  errors.ts  history.ts  main.ts  models.ts  queue.ts  registry.ts  session.ts  watchdog.ts
test/: compaction.test.ts  fileIO.test.ts  server.test.ts  watchdog.test.ts
tests/: conftest.py  fakes.py
(+317 files in other folders)
